<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="@string/preference_name_title"
        android:key="mqttId"
        android:defaultValue="@string/preference_name_default"
        android:inputType="textMultiLine" />

    <EditTextPreference
        android:title="MQTT Server"
        android:key="mqttServer"
        android:defaultValue="@string/preference_name_default"
        android:inputType="textMultiLine" />

    <EditTextPreference
        android:title="MQTT Port"
        android:key="mqttPort"
        android:defaultValue="@string/preference_name_default"
        android:inputType="textMultiLine" />

    <EditTextPreference
        android:title="MQTT Username"
        android:key="mqttUser"
        android:defaultValue="@string/preference_name_default"
        android:inputType="textMultiLine" />

    <EditTextPreference
        android:title="MQTT Passwort"
        android:key="mqttPass"
        android:defaultValue="@string/preference_name_default"
        android:inputType="textMultiLine" />

    <EditTextPreference
        android:title="Home Wifi"
        android:key="homeWifi"
        android:defaultValue="@string/preference_homeWifi_default"
        android:inputType="textMultiLine" />

    <CheckBoxPreference
        android:key="cb_powersave"
        android:title="Strom sparen"
        android:summary="MQTT aus wenn nicht gebraucht"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="cb_auto_tor"
        android:title="Garagentor auto auf"
        android:summary="Garagentor automatisch öffnen"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="cb_ring_nachts"
        android:title="Türklingel Nachts"
        android:summary="Türklingel nachts nicht stumm"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="cb_ring_immer"
        android:title="Türklingel immer laut"
        android:summary="Türklingel immer laut"
        android:defaultValue="true" />

    <SeekBarPreference
        android:key="cb_ring_vol"
        android:title="Türklingel Lautstärke"
        android:max="15"
        android:defaultValue="10" />

    <CheckBoxPreference
        android:key="cb_tuer_fg"
        android:title="Klingelbilder über Lockscreen"
        android:summary="Klingelbilder über Lockscreen"
        android:defaultValue="false" />


    <SeekBarPreference
        android:key="cb_alarm_vol"
        android:title="Wecker Lautstärke"
        android:max="15"
        android:defaultValue="5" />

    <CheckBoxPreference
        android:key="cb_alarm_imer"
        android:title="Immer alarmieren"
        android:summary="Nicht stören ausschalten für Alarme"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="cb_stumm"
        android:title="Alle stumm"
        android:summary="Handy stumm, app stumm"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="cb_vibrate"
        android:title="Extra vibrieren"
        android:summary="Extra vibrieren wenn anders nicht geht"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="checkbox_pref_mes"
        android:title="@string/preference_rec_mes_title"
        android:summary="@string/preference_rec_mes_summ"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="checkbox_pref_task"
        android:title="@string/preference_rec_tasks_title"
        android:summary="@string/preference_rec_tasks_sum"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="checkbox_pref_tuerspimess"
        android:title="TürSpion SMS"
        android:summary="Bilder als extra Nachrichten"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="checkbox_pref_showtaskmess"
        android:title="Zeige Tasker Nachricht"
        android:summary="Befehle nicht stumm ausführen"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="checkbox_pref_devel"
        android:title="Zeige Entwickler Werte"
        android:summary="Debug"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="checkbox_mess_devel"
        android:title="Zeige Entwickler Nachrichten"
        android:summary="Debug"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="checkbox_vordergrund"
        android:title="App über Lockscreen"
        android:summary="Debug"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="cb_besucher_app"
        android:title="Besucher Handy"
        android:summary="Besucher"
        android:defaultValue="false" />

</PreferenceScreen>